--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://changj34.github.io/FanCentral_LandingPage",
+  "homepage": "https://changj34.github.io/FanCentral_LandingPage",
   "name": "fancentral_landingpage",
   "version": "0.1.0",
   "private": true,
